testdata/golden/hir_borrow/invalid/spawn_escape.hir
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:30 cannot send 'r' to a spawned task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=642) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L1285(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=643) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let task: type#381 = spawn use_ref(r): type#381: type#381
  await(task): nothing
  return
}

borrow edges:
  L1287(r) (&) borrows L1286(x) at 0:87-89 scope=S5
events:
  borrow_start L1287(r) -> L1286(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L1287(r) -> L1286(x) at 0:120-121 scope=S5 note="B1"
  borrow_end L1287(r) -> L1286(x) scope=S5 note="scope_end B1"
move plan:
  L1286(x): MoveCopy (copy type)
  L1287(r): MoveForbidden (spawn escape)
  L1288(task): MoveNeedsDrop (non-copy (drop))

